# breakout-clone

./: CMakeLists.txt  LICENSE  README.md  main.cpp
assets/entities/: Ball.ase  Brick.ase  Brick_Green.ase  Brick_Yellow.ase  Paddle.ase
assets/icon/: icon.ase
include/core/: BrickManager.hpp  SceneManager.hpp
include/entities/: Ball.hpp  Brick.hpp  Paddle.hpp
include/scenes/: EndScene.hpp  GameScene.hpp  Scene.hpp  SceneManager.hpp  SceneType.hpp  StartScene.hpp
src/core/: BrickManager.cpp  CMakeLists.txt  SceneManager.cpp
src/entities/: Ball.cpp  Brick.cpp  CMakeLists.txt  Paddle.cpp
src/scenes/: CMakeLists.txt  EndScene.cpp  GameScene.cpp  SceneManager.cpp  StartScene.cpp
